--- a/themes/jms_molla/assets/scss/prepros-6.config
+++ b/themes/jms_molla/assets/scss/prepros-6.config
@@ -99,7 +99,10 @@
         "pages/_coming-soon.scss",
         "config/_helpers.scss",
         "config/_spacing.scss",
-        "elements/_font-icons.scss"
+        "elements/_font-icons.scss",
+        "plugins/magnific-popup/magnific-popup.scss",
+        "plugins/magnific-popup/_main.scss",
+        "plugins/magnific-popup/_settings.scss"
       ]
     },
     {
