--- a/themes/jms_molla/assets/scss/prepros-6.config
+++ b/themes/jms_molla/assets/scss/prepros-6.config
@@ -553,7 +553,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
